fixed tests. Added method value(). Implemented deploying MinGW dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,29 @@ enable_testing()
 
 # tests
 
+# deploy dlls if MinGW
+if(CMAKE_CXX_COMPILER_ID)
+    find_file(libgcc NAMES libgcc_s_dw2-1.dll libgcc_s_seh-1.dll)
+    find_file(libstdc++-6 libstdc++-6.dll)
+    find_file(libwinpthread-1 libwinpthread-1.dll)
+
+    add_custom_target(COPY_MINGW_DEPS
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${libgcc} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${libstdc++-6} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${libwinpthread-1} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+            COMMENT "Copying MinGW32 dependent libraries"
+            )
+else()
+    add_custom_target(COPY_MINGW_DEPS)
+endif()
+
 add_executable(test_unique_lock
         test/run_check.h
         test/test_unique_lock.cpp
         )
 target_link_libraries(test_unique_lock PRIVATE synchronized_value)
 target_include_directories(test_unique_lock PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_dependencies(test_unique_lock COPY_MINGW_DEPS)
 
 add_test(NAME test_unique_lock
         COMMAND test_unique_lock)
@@ -30,6 +47,7 @@ add_executable(test_lock_guard
         )
 target_link_libraries(test_lock_guard PRIVATE synchronized_value)
 target_include_directories(test_lock_guard PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_dependencies(test_lock_guard COPY_MINGW_DEPS)
 
 add_test(NAME test_lock_guard
         COMMAND test_lock_guard)
@@ -40,7 +58,10 @@ add_executable(test_synch_value
         )
 target_link_libraries(test_synch_value PRIVATE synchronized_value)
 target_include_directories(test_synch_value PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_dependencies(test_synch_value COPY_MINGW_DEPS)
 
 add_test(NAME test_synch_value
         COMMAND test_synch_value)
+
+
 
